tests/kyverno-policies/add-dynamo-resources/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-worker
  namespace: webservice
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: hf-wait
      image: nginx:latest
    - name: wait-for-leader-mp
      image: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: test-worker-ray
  namespace: webservice
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: hf-wait
      image: nginx:latest
    - name: wait-for-leader
      image: foo
      resources:
        requests:
          cpu: 250m
          memory: 64mi
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: hf-wait
      image: nginx:latest
    - name: wait-for-leader-mp
      image: foo
