tests/kyverno-policies/add-dynamo-resources/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-dynamo-resources
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-dynamo-resources
    rule: add-resources-to-init
    resources:
      - test-worker
      - test-worker-ray
    patchedResources: mutated.yaml
    kind: Pod
    result: pass
  - policy: add-dynamo-resources
    rule: add-resources-to-init
    resources:
      - test-paas
    kind: Pod
    result: skip
