tests/kyverno-policies/add-dynamo-resources/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: webservice
    labels:
      osc.edu/role: webservice
      osc.edu/access-dynamo-platform: "true"
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test
      account: test
